--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "node-fetch": "^2.6.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
