--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "needle": "^2.6.0",
     "node-fetch": "^2.6.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
