--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "sass": "^1.32.12",
+    "vanjs-toolkit": "^0.1.1",
     "vite": "^2.1.5"
   }
 }
